# django-kanban

./: LICENSE  pyproject.toml
django_kanban/: manage.py
django_kanban/django_kanban/: asgi.py  settings.py  urls.py  wsgi.py
