[tool.poetry]
name = "django-kanban"
version = "0.1.0"
description = "Kanban board in django"
authors = ["Vinayak <vkolgi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
